--- a/css/first.css
+++ b/css/first.css
@@ -1,5 +1,5 @@
 
-body{margin:0;padding:0;background:#ffe;font-size:14px;font-family:'寰蒋闆呴粦','瀹嬩綋',sans-serif;color:#231F20;overflow:auto}
+body{margin:0;padding:0;background:#ffe;font-size:14px;font-family:'楷体','宋体',sans-serif;color:#231F20;overflow:auto}
 a {color:#000;font-size:14px;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
